vemo-app/main/default/objects/Contact/fields/AuthorizedForStudent__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedForStudent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Authorized For) Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Authorized Third Parties)</relationshipLabel>
    <relationshipName>AuthorizedThirdParty</relationshipName>
    <type>Lookup</type>
</CustomField>