vemo-app/main/default/objects/Contact/fields/AuthSystemUserID__c.field-meta.xml
<CustomField>
    <fullName>AuthSystemUserID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The ID string identifying this user in the authentication system (currently Auth0).</inlineHelpText>
    <label>Auth System User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>