vemo-app/main/default/objects/Contact/fields/AutoPayment__c.field-meta.xml
<CustomField>
    <fullName>AutoPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The student has an active Payment Method marked as Primary and as Use For Recurring.</inlineHelpText>
    <label>Auto Payment</label>
    <type>Checkbox</type>
</CustomField>