vemo-app/main/default/objects/Contact/fields/AutoPaymentDateActivated__c.field-meta.xml
<CustomField>
    <fullName>AutoPaymentDateActivated__c</fullName>
    <inlineHelpText>The date that Auto Payment was activated.</inlineHelpText>
    <label>Auto Payment Date Activated</label>
    <type>Date</type>
</CustomField>