vemo-app/main/default/objects/Contact/fields/AutoPaymentDayOfMonth1__c.field-meta.xml
<CustomField>
    <fullName>AutoPaymentDayOfMonth1__c</fullName>
    <label>Auto Payment Day of Month 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DaysOfMonth</valueSetName>
    </valueSet>
</CustomField>