vemo-app/main/default/objects/Contact/fields/AutoPaymentDayOfMonth2__c.field-meta.xml
<CustomField>
    <fullName>AutoPaymentDayOfMonth2__c</fullName>
    <label>Auto Payment Day of Month 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DaysOfMonth</valueSetName>
    </valueSet>
</CustomField>