vemo-app/main/default/objects/Contact/fields/AutoPaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>AutoPaymentFrequency__c</fullName>
    <label>Auto Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentFrequency</valueSetName>
    </valueSet>
</CustomField>