vemo-app/main/default/objects/Contact/fields/BypassAutomation__c.field-meta.xml
<CustomField>
    <fullName>BypassAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking Bypass Automation, you can make changes to data on the object without triggering any other actions. This would, for instance, allow you to check the "Generate Bill" checkbox without subsequent actions happening.</inlineHelpText>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>