vemo-app/main/default/objects/Contact/fields/CommonLineID__c.field-meta.xml
<CustomField>
    <fullName>CommonLineID__c</fullName>
    <externalId>true</externalId>
    <label>CommonLine ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>