vemo-app/main/default/objects/Contact/fields/CommunityStatus__c.field-meta.xml
<CustomField>
    <fullName>CommunityStatus__c</fullName>
    <label>Community Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Enrolled</fullName>
            </value>
            <value>
                <fullName>Enroll</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>