vemo-app/main/default/objects/Contact/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <inlineHelpText>Amount of money being credited to student.</inlineHelpText>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>