vemo-app/main/default/objects/Contact/fields/CumulativeIncomeShare__c.field-meta.xml
<CustomField>
    <fullName>CumulativeIncomeShare__c</fullName>
    <label>Cumulative Income Share</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>