vemo-app/main/default/objects/Contact/fields/CumulativeIncomeShareCap__c.field-meta.xml
<CustomField>
    <fullName>CumulativeIncomeShareCap__c</fullName>
    <description>The smallest of the Cumulative Income Share Cap values for any programs related to this Student's Agreements</description>
    <inlineHelpText>The smallest of the Cumulative Income Share Cap values for any programs related to this Student's Agreements</inlineHelpText>
    <label>Cumulative Income Share Cap</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>