vemo-app/main/default/objects/Contact/fields/DateIncomeVerified__c.field-meta.xml
<CustomField>
    <fullName>DateIncomeVerified__c</fullName>
    <inlineHelpText>The date the student's income was verified (from the most recently verified Income Verification).</inlineHelpText>
    <label>Date Income Verified</label>
    <type>Date</type>
</CustomField>