vemo-app/main/default/objects/Contact/fields/DriversLicenseOrStateID__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseOrStateID__c</fullName>
    <label>Drivers License or State ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>