vemo-app/main/default/objects/Contact/fields/GenerateBill__c.field-meta.xml
<CustomField>
    <fullName>GenerateBill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click to have system automatically generate and send out an account statement.</inlineHelpText>
    <label>Generate Bill</label>
    <type>Checkbox</type>
</CustomField>