vemo-app/main/default/objects/Contact/fields/HasOptedOutOfText__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfText__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student has indicated they do not want to be texted.</inlineHelpText>
    <label>HasOptedOutOfText</label>
    <type>Checkbox</type>
</CustomField>