vemo-app/main/default/objects/Contact/fields/PendingBirthdate__c.field-meta.xml
<CustomField>
    <fullName>PendingBirthdate__c</fullName>
    <label>Pending Birthdate</label>
    <type>Date</type>
</CustomField>