vemo-app/main/default/objects/Contact/fields/PendingDriversLicenseOrStateID__c.field-meta.xml
<CustomField>
    <fullName>PendingDriversLicenseOrStateID__c</fullName>
    <label>Pending Drivers License or State ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>