vemo-app/main/default/objects/Contact/fields/PendingEmail__c.field-meta.xml
<CustomField>
    <fullName>PendingEmail__c</fullName>
    <label>Pending Email</label>
    <type>Email</type>
</CustomField>