vemo-app/main/default/objects/Contact/fields/PendingFirstName__c.field-meta.xml
<CustomField>
    <fullName>PendingFirstName__c</fullName>
    <label>Pending First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>