vemo-app/main/default/objects/Contact/fields/PendingLastName__c.field-meta.xml
<CustomField>
    <fullName>PendingLastName__c</fullName>
    <label>Pending Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>