vemo-app/main/default/objects/Contact/fields/PendingMailingCity__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingCity__c</fullName>
    <label>Pending Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>