vemo-app/main/default/objects/Contact/fields/PendingMailingCountry__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingCountry__c</fullName>
    <label>Pending Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>