vemo-app/main/default/objects/Contact/fields/PendingMailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingCountryCode__c</fullName>
    <label>Pending Mailing Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>