vemo-app/main/default/objects/Contact/fields/PendingMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingPostalCode__c</fullName>
    <label>Pending Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>