vemo-app/main/default/objects/Contact/fields/PendingMailingState__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingState__c</fullName>
    <label>Pending Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>