vemo-app/main/default/objects/Contact/fields/PendingMailingStateCode__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingStateCode__c</fullName>
    <label>Pending Mailing State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>