vemo-app/main/default/objects/Contact/fields/PendingMailingStreet__c.field-meta.xml
<CustomField>
    <fullName>PendingMailingStreet__c</fullName>
    <label>Pending Mailing Street</label>
    <type>TextArea</type>
</CustomField>