vemo-app/main/default/objects/Contact/fields/PendingMiddleName__c.field-meta.xml
<CustomField>
    <fullName>PendingMiddleName__c</fullName>
    <label>Pending Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>