vemo-app/main/default/objects/Contact/fields/PendingResidency__c.field-meta.xml
<CustomField>
    <fullName>PendingResidency__c</fullName>
    <label>Pending Residency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>