vemo-app/main/default/objects/Contact/fields/PreferredMethodOfCommunication__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethodOfCommunication__c</fullName>
    <inlineHelpText>How does the Student prefer to be contacted? Call, Email, Text, or Letter.</inlineHelpText>
    <label>Preferred Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>