vemo-app/main/default/objects/Contact/fields/PrimarySchool__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>