vemo-app/main/default/objects/Contact/fields/PrimarySchoolEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchoolEmail__c</fullName>
    <label>(DEPRECATE)School Email</label>
    <type>Email</type>
</CustomField>