vemo-app/main/default/objects/Contact/fields/PrimarySchoolEnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchoolEnrollmentStatus__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>