vemo-app/main/default/objects/Contact/fields/PrimarySchoolGradeLevel__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchoolGradeLevel__c</fullName>
    <label>Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>