vemo-app/main/default/objects/Contact/fields/PrimarySchoolGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchoolGraduationDate__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>