vemo-app/main/default/objects/Contact/fields/PrimarySchoolStudentID__c.field-meta.xml
<CustomField>
    <fullName>PrimarySchoolStudentID__c</fullName>
    <label>Student ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>