vemo-app/main/default/objects/Contact/fields/PrivacyOptOut__c.field-meta.xml
<CustomField>
    <fullName>PrivacyOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student opted to limit Vemo's ability to share student's personal information with affiliates and non-affiliates.</inlineHelpText>
    <label>Privacy Opt Out</label>
    <type>Checkbox</type>
</CustomField>