vemo-app/main/default/objects/Contact/fields/RecalculateCumulativeIncomeShare__c.field-meta.xml
<CustomField>
    <fullName>RecalculateCumulativeIncomeShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Cumulative Income Share</label>
    <type>Checkbox</type>
</CustomField>