vemo-app/main/default/objects/Contact/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
            <value>
                <fullName>Other Non Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>