vemo-app/main/default/objects/Contact/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <inlineHelpText>US Citizen, Permanent Resident, etc.</inlineHelpText>
    <label>Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>