vemo-app/main/default/objects/Contact/fields/SchoolProgramOfStudy__c.field-meta.xml
<CustomField>
    <fullName>SchoolProgramOfStudy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Program of Study</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>