vemo-app/main/default/objects/Contact/fields/SSNTaxID__c.field-meta.xml
<CustomField>
    <fullName>SSNTaxID__c</fullName>
    <inlineHelpText>Used by Credit Check process to verify identity.</inlineHelpText>
    <label>SSN / Tax ID</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>