vemo-app/main/default/objects/Contact/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Reference For) Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (References)</relationshipLabel>
    <relationshipName>References</relationshipName>
    <type>Lookup</type>
</CustomField>