vemo-app/main/default/objects/Contact/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <inlineHelpText>The student's time zone.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeZone</valueSetName>
    </valueSet>
</CustomField>