vemo-app/main/default/objects/Contact/fields/VerifiedAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>VerifiedAnnualIncome__c</fullName>
    <inlineHelpText>The student's yearly income (from the most recently verified Income Verification).</inlineHelpText>
    <label>Verified Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>