vemo-app/main/default/objects/Contact/recordTypes/AuthorizedThirdParty.recordType-meta.xml
<RecordType>
    <fullName>AuthorizedThirdParty</fullName>
    <active>true</active>
    <label>Authorized Third Party</label>
</RecordType>