vemo-app/main/default/objects/Contact/recordTypes/StudentReference.recordType-meta.xml
<RecordType>
    <fullName>StudentReference</fullName>
    <active>true</active>
    <label>Student Reference</label>
</RecordType>